# ResizerC

./: .gitignore  CMakeLists.txt  README.md  build.ps1  release.ps1  vcpkg.json
.github/workflows/: release.yml
include/: common.h  dll_loader.h  dragdrop.h  image.h  processing.h  resource.h  settings.h  update.h  utils.h  window.h
src/: dll_loader.c  dragdrop.c  image.c  main.c  processing.c  resizerc.rc  settings.c  update.c  utils.c  window.c
